<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shivamsapp.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.shivamsapp.Fragments.StoryFragment"
        android:label="@string/story"
        tools:layout="@layout/fragment_story" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.shivamsapp.Fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.shivamsapp.Fragments.NotificationFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.shivamsapp.Fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/notificationTabFragment"
        android:name="com.example.shivamsapp.Fragments.NotificationFragment"
        android:label="fragment_notification_tab"
        tools:layout="@layout/fragment_notification" />
</navigation>